added new files

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,41 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Build Systems #
+#################
+**/node_modules/
+.sass-cache
+**/build/output
+
+# Compiled Output #
+###################
+**/dist/*
+**/coverage/*
+**/.nyc_output/*
+**/compiled_tests/*
+
+# IDE generated files #
+#######################
+.idea/*
+*.iml
+
+# Python Cache Files#
+#####################
+**/__pycache__/*
